--- a/src/assets/sass/strumming.sass
+++ b/src/assets/sass/strumming.sass
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Ubuntu&display=swap')
-
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu&Noto+Music&display=swap')
 %padding
   padding: .6rem 1.2rem
 %color-fix
@@ -50,7 +49,9 @@ body
     display: flex
     flex-direction: column
     align-items: center
-    padding: 1rem 0
+    padding: 1rem
+    &:not(:first-child)
+      // border-left: 1px solid #ddd
     &:active
       opacity: .75
 .note, .arrow
@@ -63,8 +64,6 @@ body
   margin: 0 1rem
   font-size: 0
   position: relative
-  &.active
-    // color: red
   &:before, &:after
     content: ''
     display: block
@@ -85,9 +84,17 @@ body
     &:after
       right: .25rem
   // 1111
-  &:not(:empty) + &:not(:empty) + :not(:empty), + :last-child:empty
-      &:after
-        width: 2rem
+  &:not(:empty)
+    + *
+      &:empty:not(.rest)
+        &:last-child:after
+          width: 2.25rem
+        + :not(:empty):last-child:after
+          box-shadow: 0 -.5rem, 1rem -.5rem
+      &:not(:empty)
+        + :not(:empty) //, + :last-child:empty
+          &:after
+            width: 2.25rem
   &:empty:not(.rest)
     &:not(:last-child)
       display: none
@@ -97,34 +104,64 @@ body
         &, &:last-child
           &:after
             border-color: transparent
+            box-shadow: 0 -.5rem, -1rem -.5rem, 1.25rem -.5rem
+        &:nth-child(2):after
+          box-shadow: 0 -.5rem, -1rem -.5rem
+        &:last-child:after
+          box-shadow: 0 -.5rem
         &:not(:last-child)
           &:after
             left: auto
             right: .25rem
+          &:not(:first-child)
+            &:not(.afterEmpty):after
+              // box-shadow: 0 -.5rem, 1.25rem -.5rem
+          &.afterEmpty:not(:nth-child(2))
+            // &:after
+            //   left: 0
+            //   right: auto
+            //   box-shadow: 0 -.5rem, -1.25rem -.5rem
+          &.afterRest
+            &:after
+              left: 0
+              right: auto
+              box-shadow: 0 -.5rem
+        + *:last-child:after
+          width: 1rem
+        + *:not(:empty):not(:last-child):not(.afterRest):after
+          left: auto
+          right: .25rem
       &:empty:not(.rest)
-        &:last-child:after
-          display: none
+        &:after
+          border-color: transparent
+          box-shadow: 0 -.5rem, 1rem -.5rem
         + span
           &:not(:empty)
+            &:last-child:after
+              box-shadow: 0 -.5rem
             &:not(:last-child):after
               @extend %reverse-roof
           &:not(:empty), &:last-child
             // 8.
-            &:before
+            &:not(.rest):before
               box-shadow: inset 0 0 0 3rem, 1rem -.5rem 0 -.3rem
             &:after
               border-color: transparent
               &:not(:last-child)
                 @extend %reverse-roof
+            &:nth-child(3):after
+              box-shadow: 0 -.5rem
           &:empty:not(.rest)
             + span
               // 4
               &:before
                 box-shadow: inset 0 0 0 3rem
-    &:first-child:not(:empty) + span, &:not(:first-child):not(:last-child)
+              &:after
+                box-shadow: none
+    &:first-child:not(:empty) + span, &:not(:first-child):not(:last-child):not(:empty)
       + span:not(:empty):not(:last-child)
         &:after
-          box-shadow: 0 -.5rem, 1.25rem -.5rem
+          box-shadow: -.25rem -0.5rem, 1.5rem -0.5rem, 2.25rem -0.5rem
   &__wrapper
     display: inline-flex
     flex-direction: row-reverse
@@ -141,7 +178,7 @@ body
       left: 1rem
       right: 1rem
       border-top: .25rem solid
-    &.quarter:before
+    &.quarter:before, &.fullrest:before
       border-color: transparent
     &.tie:after
       width: 1rem
@@ -164,18 +201,37 @@ body
       border-bottom-color: inherit
       border-top-color: transparent
   &.rest
-    color: red
+    border: 0
+    margin: 0
+    width: 3rem
+    text-align: center
     &:before
+      content: '𝄿'
+      font-family: 'Noto Music', sans-serif
+      font-weight: bold
       top: 0
       left: -1.5rem
+      box-shadow: none
+      font-size: 3rem
+      text-indent: -0.25em
+      line-height: .75em
+      position: static
+      width: auto
+      height: auto
     &:after
       display: none
+    &:only-child:before
+      content: '𝄽'
     &.afterRest
       display: none
-    + .note:not(.rest):not(:last-child)
-      &:after
-        left: auto
-        right: .25rem
+    + .note:not(.rest)
+      &:not(:last-child)
+        &:after
+          left: auto
+          right: .25rem
+    + span:empty:not(.rest)
+      + *:not(.rest):after
+        box-shadow: 0 -.5rem
   &.afterRest
     &:not(.rest)[class][class]
       &:after
@@ -186,7 +242,8 @@ body
   &:empty
     + .rest
       // 8
-      color: firebrick
+      &:before
+        content: '𝄾'
     &:first-child
       + .afterRest:not(:empty)[class]:after
         left: auto
@@ -196,15 +253,21 @@ body
       &:empty
         + .rest
           // 8.
-          color: green
+          &:before
+            content: '𝄾𝅭'
+  &:first-child
+    &.afterRest
+      &:after
+        left: 0
+        right: auto
 .arrow
   height: .25rem
   margin-top: 1.75rem
   box-shadow: 0 -.25rem, 0 -.5rem, 0 -.75rem, 0 -1rem, 0 -1.25rem
   &__wrapper
     &:before
-      left: .5rem
-      right: .75rem
+      left: .25rem
+      right: .25rem
   &:before
     box-shadow: none
     border-left: .25rem solid
@@ -220,9 +283,12 @@ body
   &:after
     bottom: -1rem
     top: auto
-    transform: scaleX(1.75)
+    transform-origin: left bottom
+    transform: translateX(-1rem)
+    width: 1.75rem
   &:first-child:after
-    right: .125rem
+    // right: .125rem
+    right: auto
   &:nth-child(1), &:nth-child(3)
     &:before
       transform: translateY(100%) rotate(-135deg)
@@ -230,16 +296,32 @@ body
       bottom: -.125rem
   &:empty:not(.rest)
     + span
+      &:not(:empty)
+        &:not(:last-child):after
+          right: auto
+        + *:last-child:after
+          width: 1.75rem
+        + *:not(:empty):not(:last-child):not(.afterRest):after
+          right: auto
       &:empty:not(.rest)
         + span
           &:not(:empty), &:last-child
             box-shadow: 0 -.25rem, 0 -.5rem, 0 -.75rem, 0 -1rem, 0 -1.25rem, 1rem 0 0 .05rem
+            &.rest
+              box-shadow: 1rem 0 0 .05rem
+            &:not(.rest):before
+              box-shadow: none
             &:before
               box-shadow: none
-          &:empty:not(.rest) + span
-            box-shadow: 0 -.25rem, 0 -.5rem, 0 -.75rem, 0 -1rem, 0 -1.25rem
-            &:before
-              box-shadow: none
+          &:empty:not(.rest)
+            + span
+              box-shadow: 0 -.25rem, 0 -.5rem, 0 -.75rem, 0 -1rem, 0 -1.25rem
+              &:before
+                box-shadow: none
+  &:not(:empty)
+    & + &
+      &:not(:nth-child(3)):after
+        width: 2.25rem
   &.rest
     &, &:before
       border-color: transparent
@@ -248,7 +330,15 @@ body
       content: '0'
       font-size: 2rem
       top: 0
-      transform: translate(-1rem, -2rem)
+      transform: translate(-.75rem, -2rem)
+    &:only-child
+      &:after
+        display: none
+    &.afterRest
+      display: none
+    + .rest
+      &:after
+        display: none
   &__wrapper
     margin-top: 2em
     opacity: .5
@@ -264,10 +354,13 @@ body
   font-size: 1.2rem
   &:empty:before
     content: '-'
-  &:not(:empty) + &.rest
+  // &:not(:empty) + &.rest
+  &.rest
     &:before
       content: '0'
       font-size: inherit
+    + .rest:before
+      content: '-'
   &__wrapper
     display: flex
     justify-content: center
@@ -311,6 +404,32 @@ body
     left: .3rem
     transform-origin: left top
     transform: rotate(60deg)
+.btn-add
+  position: relative
+  width: 2rem
+  height: 2rem
+  background: none
+  border: 0
+  opacity: .5
+  border: 2px solid #eee
+  border-radius: 50%
+  align-self: center
+  cursor: pointer
+  transition: .2s
+  &:hover
+    opacity: 1
+  &:before, &:after
+    content: ''
+    position: absolute
+    top: calc(50% - .125rem)
+    display: block
+    border-top: .25rem solid
+    border-radius: 4px
+    width: 1rem
+  &:after
+    transform-origin: center center
+    transform: rotate(90deg)
+
 @keyframes rotate
   0%
     transform: rotate(150deg)
