--- a/src/assets/sass/strumming.sass
+++ b/src/assets/sass/strumming.sass
@@ -6,12 +6,44 @@
 %reverse-roof
   left: auto
   right: .25rem
+%label
+  @extend %padding
+  @extend %color-fix
+  display: inline-block
+  cursor: pointer
+  border: 2px solid #eee
+  border-radius: .25rem
+  width: 100%
+  position: relative
+  box-sizing: border-box
+%button
+  display: inline-block
+  vertical-align: middle
+  position: relative
+  font-size: inherit
+  min-width: 2em
+  height: 2em
+  background: none
+  border: 2px solid #eee
+  border-radius: 2em
+  align-self: center
+  cursor: pointer
+  transition: .2s
+  padding: 0 1em
+  background: white
+  @media screen and (min-width: 1025px)
+    opacity: .5
+  &:hover
+    opacity: 1
 
 html
   @media screen and (max-width: 568px) and (orientation: landscape)
     font-size: 12px
-body
+body, *
   font-family: 'Ubuntu', sans-serif
+body
+  margin: 0
+  padding: 0
 *, *:before, *:after
   border-color: inherit
   color: inherit
@@ -30,7 +62,49 @@ body
     opacity: .5
 #app
   background: white
-  padding-top: 10vh
+.navpage
+  &__page
+    transition: .2s
+  &__nav
+    position: fixed
+    z-index: 100
+    left: 0
+    top: 0
+    padding: 1em
+    .preference
+      position: absolute
+      left: .5em
+      top: 3em
+      transition: .2s
+      padding: 0
+      transform: translateX(-100%)
+    &.open
+      + .navpage__page
+        opacity: .25
+        pointer-events: none
+      .preference
+        transform: translateX(0)
+      .navpage__nav__toggle
+        opacity: 1
+        transform: none
+        &:before
+          pointer-events: all
+    &__toggle
+      @extend %button
+      @media screen and (max-width: 320px)
+        transform-origin: left bottom
+        transform: rotate(90deg) translateX(-2em)
+      &:before
+        content: ''
+        position: fixed
+        left: 0
+        right: 0
+        bottom: 0
+        top: 0
+        z-index: -1
+        pointer-events: none
+
+
 .bar
   display: flex
   flex-wrap: wrap
@@ -41,19 +115,34 @@ body
     padding-right: 0
   @media screen and (max-width: 480px)
     flex-direction: column
-  .beat
-    cursor: pointer
-    transition: .2s
-    min-width: 8rem
-    text-align: center
-    display: flex
-    flex-direction: column
-    align-items: center
-    padding: 1rem
-    &:not(:first-child)
-      // border-left: 1px solid #ddd
-    &:active
-      opacity: .75
+.beat
+  cursor: pointer
+  transition: .2s
+  min-width: 8rem
+  text-align: center
+  display: flex
+  flex-direction: column
+  align-items: center
+  padding: 2rem
+  border-radius: 8px
+  &:hover
+    box-shadow: 0 0 0 2px #eee
+  &:active
+    opacity: .75
+  .control
+    margin: 0
+    @media screen and (min-width: 1025px)
+      transition: .2s
+      opacity: 0
+      pointer-events: none
+      margin: 0
+    button
+      font-size: 12px
+      font-weight: normal
+  &:hover
+    .control
+      opacity: 1
+      pointer-events: all
 .note, .arrow
   border-left: .25rem solid
   height: 2rem
@@ -166,7 +255,7 @@ body
     display: inline-flex
     flex-direction: row-reverse
     justify-content: flex-end
-    margin: 2rem
+    margin: 1rem
     position: relative
     @media screen and (orientation: landscape)
       margin: 1rem
@@ -342,8 +431,6 @@ body
   &__wrapper
     margin-top: 2em
     opacity: .5
-    @media screen and (orientation: portrait)
-      margin-bottom: 5rem
     &:before
       top: auto
       bottom: -.5rem   
@@ -367,68 +454,34 @@ body
     padding: 1rem 0
     + .arrow__wrapper
       margin-top: 0
+.control
+  font-size: 16px
+  margin: .5rem 1rem
+  text-align: center
+  button
+    @extend %button
+    margin: .5em
+    &.btn-add
+      padding: 0
 
-.btn-refresh
-  @extend %color-fix
-  display: block
-  margin: 1vw auto
-  position: relative
-  cursor: pointer
-  border: 0
-  padding: 0
-  background: none
-  transition: .2s
-  transform: rotate(120deg)
-  color: inherit
-  opacity: .5
-  &:hover
-    opacity: 1
-  &:active
-    animation: rotate .2s linear 1
-  &:before, &:after
-    content: ''
-    display: block
-  &:before
-    width: 1rem
-    height: 1rem
-    border: .25rem solid
-    border-top-color: transparent
-    border-radius: 50%
-  &:after
-    position: absolute
-    width: .5rem
-    height: .5rem
-    border-top: .25rem solid
-    border-left: .25rem solid
-    top: .0rem
-    left: .3rem
-    transform-origin: left top
-    transform: rotate(60deg)
 .btn-add
-  position: relative
-  width: 2rem
-  height: 2rem
-  background: none
-  border: 0
-  opacity: .5
-  border: 2px solid #eee
-  border-radius: 50%
-  align-self: center
-  cursor: pointer
-  transition: .2s
-  &:hover
-    opacity: 1
   &:before, &:after
     content: ''
     position: absolute
-    top: calc(50% - .125rem)
+    top: calc(50% - .125em)
+    left: calc(.5em - .125em)
     display: block
-    border-top: .25rem solid
+    border-top: .25em solid
     border-radius: 4px
-    width: 1rem
+    width: 1em
   &:after
     transform-origin: center center
     transform: rotate(90deg)
+.btn-delete
+  color: firebrick
+
+
+
 
 @keyframes rotate
   0%
@@ -439,23 +492,12 @@ body
     transform: rotate(480deg)
 
 .preference
-  display: flex
-  align-items: stretch
-  justify-content: center
+  display: table
   padding: 1rem
-  @media screen and (min-width: 1025px)
-    display: table
-    position: fixed
-    padding: 1rem
-    left: 0
-    top: 0
-  @media screen and (max-width: 480px)
-    flex-direction: column
   > *
     font-size: 1rem
-    margin: 0 .5rem
-    @media screen and (max-width: 480px)
-      margin: .5rem
+    margin: .5rem
+    background: white
     label
       height: 100%
       box-sizing: border-box
@@ -478,6 +520,7 @@ select
     border-color: inherit
     outline: none
 .color-picker
+  align-self: stretch
   > input
     opacity: 0
     pointer-event: none
@@ -492,9 +535,7 @@ select
       opacity: .8
 .checkbox
   margin: .5rem
-  @media screen and (max-width: 1024px) and  (min-width: 481px)
-    margin-top: 0
-    margin-bottom: 0
+  white-space: nowrap
   > input
     pointer-events: none
     position: absolute
@@ -507,14 +548,7 @@ select
       // content: 'ON'
       // box-shadow: inset 0 0 0 10rem
   > label
-    @extend %padding
-    @extend %color-fix
-    display: inline-block
-    cursor: pointer
-    border: 2px solid #eee
-    border-radius: .25rem
-    width: 100%
-    position: relative
+    @extend %label
     &:before
       content: ''
       display: inline-block
@@ -539,3 +573,27 @@ select
       margin-left: 1rem
       background: #f2f2f2
       box-shadow: inset 0 0 0 10rem #ccc
+.input
+  @extend %label
+  width: auto
+  display: flex
+  > input
+    transition: .2s
+    min-width: 0
+    width: 50px
+    text-align: right
+    font-size: inherit
+    border: 0
+    margin-left: 1em
+    outline: none
+    border-radius: .125rem
+    flex: 1 1 1%
+    &:focus
+      background: #eee
+      box-shadow: 0 0 0 2px #eee
+
+.list-enter, .list-leave-to
+  opacity: 0
+  transform: translateY(10px)
+.list-leave-active 
+  position: absolute
