--- a/src/assets/sass/strumming.sass
+++ b/src/assets/sass/strumming.sass
@@ -103,8 +103,6 @@ body
         top: 0
         z-index: -1
         pointer-events: none
-
-
 .bar
   display: flex
   flex-wrap: wrap
@@ -428,6 +426,8 @@ body
     + .rest
       &:after
         display: none
+      + .rest
+        box-shadow: 1rem 0 0 0.05rem
   &__wrapper
     margin-top: 2em
     opacity: .5
