--- a/src/assets/sass/strumming.sass
+++ b/src/assets/sass/strumming.sass
@@ -40,6 +40,8 @@
 
 html
   height: 100%
+  @media screen and (max-width: 991px)
+    font-size: 14px
   @media screen and (max-width: 768px)
     font-size: 12px
 body, *
@@ -51,6 +53,8 @@ body
 *, *:before, *:after
   border-color: inherit
   color: inherit
+svg
+  width: 1em
 [hint]
   position: relative
   &:before
@@ -94,7 +98,7 @@ body
     bottom: 0
     padding: 1em
     display: flex
-    align-items: center
+    align-items: flex-end
     justify-content: space-between
     .preference
       left: .5em
@@ -102,15 +106,17 @@ body
       transition: .2s
       padding: 0
       display: flex
+      flex-wrap: wrap
     .control
+      margin-left: auto
       button
-        min-width: 1.5em
-        height: 1.5em
-        padding: 0 .725rem
+        min-width: 3.5em
+        min-height: 3.5em
+        height: auto
+        padding: .5em 1em
+        svg
+          transform: scale(1.1) translate(0, 1px)
         @media screen and (min-width: 769px)
-          min-width: 3em
-          height: 3em
-          padding: 0 1.5rem
 .bar
   display: flex
   flex-wrap: wrap
@@ -131,7 +137,7 @@ body
   padding: 2rem
   border-radius: 8px
   @media screen and (max-width: 768px)
-    padding: 0
+    padding: 2rem 1rem
   &:hover
     @media screen and (min-width: 1025px)
       box-shadow: 0 0 0 2px #eee
@@ -139,7 +145,11 @@ body
     opacity: .75
   .control
     margin: 0
-    opacity: 0
+    @media screen and (max-width: 768px)
+      margin-bottom: 1em
+      background: #fafafa
+      border-radius: 3em
+      padding: .25em
     @media screen and (min-width: 1025px)
       transition: .2s
       opacity: 0
@@ -149,8 +159,20 @@ body
       font-size: 12px
       font-weight: normal
       opacity: .5
+      width: 3em
+      height: 3em
+      padding: .5em
+      svg
+        position: relative
+        fill: #666
+        top: 1px
       &:hover
         opacity: 1
+      @media screen and (max-width: 768px)
+        opacity: 1
+        margin: 0 .25em
+        padding: 0
+        border-color: #f2f2f2
   &:hover
     .control
       opacity: 1
@@ -469,8 +491,6 @@ body
     + .arrow__wrapper
       margin-top: 0
 .control
-  font-size: 16px
-  margin: .5rem 1rem
   text-align: center
   button
     @extend %button
@@ -483,18 +503,20 @@ body
     content: ''
     position: absolute
     top: calc(50% - .125em)
-    left: calc(.5em - .125em)
+    left: calc(50% - .5em)
     display: block
     border-top: .125em solid
     border-radius: 4px
     width: 1em
     @media screen and (min-width: 769px)
-      left: calc(1em - .125em)
+      left: calc(1em + .125em)
   &:after
     transform-origin: center center
     transform: rotate(90deg)
 .btn-delete
   color: firebrick
+  svg path
+    fill: firebrick
 @keyframes rotate
   0%
     transform: rotate(150deg)
