--- a/src/assets/sass/reset.sass
+++ b/src/assets/sass/reset.sass
@@ -6,6 +6,8 @@ html
     font-size: 12px
 body, *
   font-family: 'Ubuntu', sans-serif
+  letter-spacing: .05em
+  line-height: 1.5
 body
   margin: 0
   padding: 0
