--- a/src/assets/sass/_mixins.sass
+++ b/src/assets/sass/_mixins.sass
@@ -78,6 +78,7 @@ $color: (powder: #f6f7f9, light: #e9ebee, gray: #bec4c9, dark: #9ca1a6, black: #
     border: 0
     background: none
     line-height: 0
+    cursor: pointer
     color: var(--theme-color)
     fill: var(--theme-color)
     +min-screen($breakpoint + 1)
