--- a/src/assets/sass/base.sass
+++ b/src/assets/sass/base.sass
@@ -7,7 +7,7 @@ $theme-color: #333
   +color-fix
   display: inline-block
   cursor: pointer
-  border: 2px solid #eee
+  border: 2px solid color(light)
   border-radius: .25rem
   width: 100%
   position: relative
@@ -38,6 +38,8 @@ $theme-color: #333
   background: white
   position: relative
   z-index: 0
+  color: var(--theme-color)
+  fill: var(--theme-color)
   &__page
     transition: .2s
     flex: 1 1 1%
@@ -95,14 +97,17 @@ select
   align-self: stretch
   > input
     opacity: 0
-    pointer-event: none
-    position: absolute
+    height: 0
+    width: 0
+    pointer-events: none
+    position: fixed
   > label
-    width: 1.5em
+    width: 2em
     transition: .2s
     height: 100%
-    border: 1px solid
-    box-shadow: inset 0 0 0 10rem
+    border: 2px solid color(light)
+    box-sizing: border-box
+    box-shadow: inset 0 0 0 2px white, inset 0 0 0 10rem
     display: block
     border-radius: .25rem
     cursor: pointer
