--- a/src/assets/sass/strumming.sass
+++ b/src/assets/sass/strumming.sass
@@ -45,7 +45,7 @@
   border-radius: 8px
   @media screen and (max-width: 768px)
     padding: 2rem 1rem
-  &:hover
+  &:not(.disabled):hover
     @media screen and (min-width: 1025px)
       box-shadow: 0 0 0 2px #eee
   &:active
@@ -425,9 +425,3 @@
     transform: rotate(360deg)
   100%
     transform: rotate(480deg)
-
-.list-enter, .list-leave-to
-  opacity: 0
-  transform: translateY(10px)
-.list-leave-active 
-  position: absolute
