--- a/src/assets/sass/base.sass
+++ b/src/assets/sass/base.sass
@@ -46,7 +46,7 @@ $theme-color: #333
     +max-screen(768)
       min-height: 0
   select
-    min-height: 47px
+    min-height: 3rem
     +max-screen(768)
       width: calc(100% - 24px)
       box-sizing: border-box
