--- a/src/assets/sass/reset.sass
+++ b/src/assets/sass/reset.sass
@@ -8,6 +8,7 @@ body, *
   font-family: 'Ubuntu', sans-serif
   letter-spacing: .025em
   line-height: 1.5
+  touch-action: pan-x pan-y
 body
   margin: 0
   padding: 0
