--- a/src/assets/sass/base.sass
+++ b/src/assets/sass/base.sass
@@ -45,8 +45,10 @@ $theme-color: #333
   .color-picker
     +max-screen(768)
       min-height: 0
+  > select
+    line-height: 2
+    min-height: 0
   select
-    min-height: 3rem
     +max-screen(768)
       width: calc(100% - 24px)
       box-sizing: border-box
@@ -229,10 +231,11 @@ select
   align-self: flex-start
   > label
     @extend %label
+  input
+    text-align: right
   input, select
     transition: .2s
     min-width: 0
-    text-align: right
     font-size: inherit
     border: 0
     padding: 0
