--- a/src/assets/sass/transition.sass
+++ b/src/assets/sass/transition.sass
@@ -6,8 +6,10 @@
 
 
 .fade-enter-active, .fade-leave-active
-  transition: opacity .5s ease
+  transition: opacity .2s ease
 .fade-enter-from, .fade-leave-to
   opacity: 0
 .fade-leave-active
   position: absolute
+  left: 50%
+  transform: translateX(-50%)
